--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Hi! I'm Luis Castillo </h1>
+<h1>Another line</h1>
 <h2>The puppy in the picture is not actually me :(</h2>
 <p>I'm a beginner on the coding world, wanting to learn <i>everything</i> I can by
   sharing experiences with <b>everyone</b>.
