changes to the files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>The puppy in the picture is not actually me :(</h2>
 <p>I'm a beginner on the coding world, wanting to learn <i>everything</i> I can by
   sharing experiences with <b>everyone</b>.
-
+<p>Another line</p>
 <p>I am very:</p>
 <ul>
   <li>Resourceful</li>
