--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <title>Hi I'm Luis</title>
   <img src="http://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-8.jpg" alt="" width="50">
 </head>
-<body>
-<h1>Hi! I'm Luis Castillo </h1>
+<body style="background-color:lightgrey">
+
+  <h1 style="color:Blue"> Hi! I'm Luis Castillo
+    </h1>
 <h1>Another line</h1>
 <h2>The puppy in the picture is not actually me :(</h2>
 <p>I'm a beginner on the coding world, wanting to learn <i>everything</i> I can by
   sharing experiences with <b>everyone</b>.
 <p>Another line</p>
 <p>I am very:</p>
+
 <ul>
   <li>Resourceful</li>
   <li>Open minded</li>
