Changes class lost

--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 <h1>Another line</h1>
 <h2>The puppy in the picture is not actually me :(</h2>
 <p>I'm a beginner on the coding world, wanting to learn <i>everything</i> I can by
-  sharing experiences with <b>everyone</b>.
+  sharing experiences with <b>everyone</b>. </p>
 <p>Another line</p>
 <p>I am very:</p>
 
 <ul>
-  <li>Resourceful</li>
+  <li src = "Media\">Resourceful</li>
   <li>Open minded</li>
   <li>Friendly</li>
   <li>Curious</li>
 </ul>
-</p>
+<a href="mailto:luisjdcastillo@gmail.com">Contact me</a>
+<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d26137.866025908374!2d-85.3349240091593!3d35.02589418588951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x88605e7c73cb3f0b%3A0x8a9795245d49a8ea!2sThe+Edney+Innovation+Center%2C+Market+Street%2C+Chattanooga%2C+TN!3m2!1d35.0436506!2d-85.3091184!4m5!1s0x88605c494924b597%3A0x115897f4c5ab99a8!2s3716+Carl+White+Pl%2C+Chattanooga%2C+TN+37410-1267%2C+EE.+UU.!3m2!1d35.0098692!2d-85.3198165!5e0!3m2!1sen!2sus!4v1488645657291" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 </body>
 </html>
